# mpiexecstdout

./: CMakeLists.txt  libstdout.c  mpiexecstdout.in
